Quick fix to a bug caused by switching from Font Awesome to Material Design Icons. Icons in the toast notifications were too big.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -382,9 +382,12 @@ button {
     height: 1.5rem;
     border-radius: 50%;
     overflow: hidden;
-    font-size: 0.75rem;
     color: var(--background);
     flex-shrink: 0;
+}
+
+.toast__icon .material-icons {
+    font-size: 1rem;
 }
 
 .toast__icon.toast--success {
